--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   image: 4.7.2
   image_picker: 1.2.0
   color_models: 2.0.0
+  permission_handler: 12.0.1
 
 dev_dependencies:
   flutter_test:
