新增渐变字组件 配置页修改

--- a/macos/Runner/DebugProfile.entitlements
+++ b/macos/Runner/DebugProfile.entitlements
@@ -8,23 +8,19 @@
 	<true/>
 	<key>com.apple.security.network.server</key>
 	<true/>
-    <key>com.apple.security.network.client</key>
-    <true/>
-    <!-- 文件访问权限 -->
-    <key>com.apple.security.files.user-selected.read-only</key>
-    <true/>  <!-- 读取用户选择的文件 -->
-    <key>com.apple.security.files.user-selected.read-write</key>
-    <true/>  <!-- 写入用户选择的文件 -->
-    <!-- 访问下载文件夹 -->
-    <key>com.apple.security.files.downloads.read-only</key>
-    <true/>
-    <!-- 书签权限（记住用户选择的文件夹） -->
-    <key>com.apple.security.files.bookmarks.app-scope</key>
-    <true/>
-    <key>com.apple.security.files.bookmarks.document-scope</key>
-    <true/>
-    <!-- 如果需要访问 iCloud -->
-    <key>com.apple.security.icloud-container-identifiers</key>
-    <true/>
+	<key>com.apple.security.network.client</key>
+	<true/>
+	<key>com.apple.security.files.user-selected.read-only</key>
+	<true/>
+	<key>com.apple.security.files.user-selected.read-write</key>
+	<true/>
+	<key>com.apple.security.files.downloads.read-write</key>
+	<true/>
+	<key>com.apple.security.files.bookmarks.app-scope</key>
+	<true/>
+	<key>com.apple.security.files.bookmarks.document-scope</key>
+	<true/>
+	<key>com.apple.security.icloud-container-identifiers</key>
+	<true/>
 </dict>
 </plist>
